Added reverse text feature

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,8 +7,8 @@
 <body>
 <h1>Viceversa</h1>
 <h2>Textarea</h2>
-<form action="% url 'reverse' %">
-    <textarea name="user-input" id="input" cols="30" rows="10"></textarea>
+<form action="{% url 'reverse' %}">
+    <textarea name="usertext" id="input" cols="30" rows="10"></textarea>
     <br><br>
     <input type="submit" value="Reverse">
 </form>
