--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -5,7 +5,9 @@
     <title>Reverse</title>
 </head>
 <body>
-<h1>Reverse</h1>
-
+<h1>Original text</h1>
+{{usertext}}
+<h1>Recersed Text</h1>
+{{reversedtext}}
 </body>
 </html>
