--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -5,7 +5,7 @@
     <title>Reverse</title>
 </head>
 <body>
-<h1>Original text</h1>
+<h1>Original text has {{number_of_words}} words</h1>
 {{usertext}}
 <h1>Recersed Text</h1>
 {{reversedtext}}
